feat: add booking functionality with database support
- Implement Booking entity with JPA annotations
- Create BookingRepository with custom query methods
- Add BookingService with full business logic
- Create BookingController with all required endpoints
- Add comments functionality with validation
- Update ItemService to show booking dates for owners
- Configure H2 and PostgreSQL database support
- Fix pagination and state filtering issues
- Add comprehensive error handling
- All Maven tests passing successfully